<resources>
    <string name="app_name">EU Quiz</string>
    <string name="appLogoName">Welcome to EU Quiz</string>
    <string name="nameHint">Enter your name here</string>
    <string name="enterNameToast">Enter a name</string>
    <string name="questionNumber" translatable="false">""</string>
    <string name="question" translatable="false">""</string>
    <string name="contentDesc1">Image of EU parliament</string>
    <string name="contentDesc2">EU quiz logo</string>
    <string name="contentDesc3">Pictures of EU institutions.</string>
    <string name="contentDesc4">Completion emoji, depending on user score.</string>
    <string name="contentDesc5">Click here to go to European parliament website.</string>
    <string name="contentDesc6">Click here to go to European commission website.</string>

    <string name="next">Next</string>

    <string name="answer0" translatable="false">""</string>
    <string name="answer1" translatable="false">""</string>
    <string name="answer2" translatable="false">""</string>
    <string name="answer3" translatable="false">""</string>

    <string name="questionTxt">Question" "</string>
    <string name="toastMsg">" "out of 10 questions answered.</string>

    <string name="question0">When was the European Union created?</string>
    <string name="question1">How many members did the Union count when the Euro began circulation in January 2000?</string>
    <string name="question2">How many countries were members of the Eurozone when Euro coins and banknotes were first circulated on 1st January 2002?</string>
    <string name="question3">What was the former name of the currency for Europe, now known as the Euro?</string>
    <string name="question4">How many stars are there on the European Flag?</string>
    <string name="question5">Who was not a president of the European Commission?</string>
    <string name="question6">Which of these is not part of the European Union?</string>
    <string name="question7">The Presidency of the European Union is rotated every _ months?</string>
    <string name="question8">Who is not regarded as the \'chief architect\' of the European Union?</string>
    <string name="question9">When you cross the border from Germany to the Netherlands without showing your passport you do so due to:</string>

    <string name="answerString0">In 1993</string>
    <string name="answerString1">In 2014</string>
    <string name="answerString2">In 2003</string>
    <string name="answerString3">In 1956</string>

    <string name="answerString4" translatable="false">18</string>
    <string name="answerString5" translatable="false">15</string>
    <string name="answerString6" translatable="false">12</string>
    <string name="answerString7" translatable="false">10</string>

    <string name="answerString8" translatable="false">9</string>
    <string name="answerString9" translatable="false">18</string>
    <string name="answerString10">12</string>
    <string name="answerString11">10</string>

    <string name="answerString12">E-Mark</string>
    <string name="answerString13">ECU</string>
    <string name="answerString14">Sterling</string>
    <string name="answerString15">Pound</string>

    <string name="answerString16" translatable="false">9</string>
    <string name="answerString17" translatable="false">15</string>
    <string name="answerString18" translatable="false">12</string>
    <string name="answerString19" translatable="false">10</string>

    <string name="answerString20">Santer</string>
    <string name="answerString21">Prodi</string>
    <string name="answerString22">Dehaene</string>
    <string name="answerString23">Junker</string>

    <string name="answerString24">The European Council</string>
    <string name="answerString25">The Council of Europe</string>
    <string name="answerString26">The Council</string>
    <string name="answerString27">The European Commission</string>

    <string name="answerString28">2y, 6m</string>
    <string name="answerString29">0y, 12m</string>
    <string name="answerString30">4y, 0m</string>
    <string name="answerString31">5y, 0m</string>

    <string name="answerString32">Robert Schuman</string>
    <string name="answerString33">Jean Monnet</string>
    <string name="answerString34">Winston Churchill</string>
    <string name="answerString35">Schuman Robert</string>

    <string name="answerString36">The Maastricht Treaty</string>
    <string name="answerString37">The Schengen Agreement</string>
    <string name="answerString38">The Brussels Agreement</string>
    <string name="answerString39">The Treaty of Rome</string>

    <string name="strValue0" translatable="false">""</string>
    <string name="strValue1" translatable="false">""</string>
    <string name="strValue2" translatable="false">""</string>
    <string name="strValue3" translatable="false">""</string>

    <string name="editTextHint">Enter the answer here</string>

    <string name="resultHeader">Results</string>
    <string name="showResult" translatable="false">""</string>
    <string name="resultText0">"Great! You know all about the EU!"</string>
    <string name="resultText1">"Congratulations! You know more than average about EU!"</string>
    <string name="resultText2">"Good Job! You cover the avarage knowledge on EU!"</string>
    <string name="resultText3">"You know just about average on EU."</string>
    <string name="resultText4">"You need to study more. Come retake the test later."</string>
    <string name="resultPoints" translatable="false">""</string>

    <string name="result_toast_excellent">Great work! You scored\t</string>
    <string name="result_toast_very_good">Nice! You scored\t</string>
    <string name="result_toast_good">You scored\t</string>
    <string name="result_toast_average">Not too bad, you scored\t</string>
    <string name="result_toast_poor">Oh no! You scored just\t</string>
    <string name="result_toast_points">\tpoints</string>

    <string name="scoreMessage1">You have" "</string>
    <string name="scoreMessage2">" "out of 100 points. Thank you for participating," "</string>

    <string name="buttonRetake">Retake</string>
    <string name="buttonFinish">Close</string>

    <string name="epWebsite">Visit EP website</string>
    <string name="ecWebsite">Visit EC website</string>
</resources>
